[gd_scene load_steps=4 format=3 uid="uid://cf8aqhigmevk5"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_futrr"]
[ext_resource type="StyleBox" uid="uid://dx2bdikcnu7cp" path="res://style/menu.tres" id="1_jw32a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmg3r"]
bg_color = Color(0.917647, 0.6, 0.345098, 1)

[node name="Menu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)
script = ExtResource("1_futrr")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -298.0
offset_right = 68.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("1_jw32a")
theme_override_styles/hover = ExtResource("1_jw32a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmg3r")
text = "Play"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -135.0
offset_right = 95.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Battle Pong"

[connection signal="new_game_started" from="." to="." method="_on_new_game_started"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
